--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,26 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  shared_preferences: ^2.2.0
+  provider: ^6.0.5
+  flutter_iconly: ^1.0.2
+  card_swiper: ^2.0.4
+  fancy_shimmer_image: ^2.0.3
+  flutter_staggered_grid_view: ^0.6.2
+  badges: ^3.1.1
+  flutter_spinkit: ^5.2.0
+#  fluttertoast: ^8.0.9
+#  uuid: ^3.0.6
+  # Firebase
+  firebase_core: ^2.14.0
+  firebase_auth: ^4.6.3
+  firebase_storage: ^11.2.4
+  cloud_firestore: ^4.8.2
+  google_sign_in: ^6.1.4
+
+
+#  flutter_stripe: ^2.5.0
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -59,8 +79,16 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
+    - assets/images/cat/
+    - assets/images/landing/
+    - assets/images/offers/
+#    - assets/images/cat/fruits.png
+#    - assets/images/cat/nuts.png
+#    - assets/images/cat/spices.png
+#    - assets/images/cat/Spinach.png
+#    - assets/images/cat/veg.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
