--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,8 @@ dependencies:
   flutter_staggered_grid_view: ^0.6.2
   badges: ^3.1.1
   flutter_spinkit: ^5.2.0
-#  fluttertoast: ^8.0.9
-#  uuid: ^3.0.6
+  fluttertoast: ^8.2.2
+  uuid: ^3.0.7
   # Firebase
   firebase_core: ^2.14.0
   firebase_auth: ^4.6.3
