Implemented place Order and fetch order

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,9 +66,15 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: ^0.13.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/launchIcon/1024.png"
 
 # The following section is specific to Flutter packages.
 flutter:
@@ -84,7 +90,7 @@ flutter:
     - assets/images/cat/
     - assets/images/landing/
     - assets/images/offers/
-#    - assets/images/cat/fruits.png
+    - assets/images/launchIcon/1024.png
 #    - assets/images/cat/nuts.png
 #    - assets/images/cat/spices.png
 #    - assets/images/cat/Spinach.png
